CD/user/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: user
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          service: catalog
    ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8081
